# fabricflow

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fabricflow/: __init__.py  main.py
src/fabricflow/auth/: __init__.py  base.py  provider.py
src/fabricflow/client/: __init__.py  base.py  fabric.py
src/fabricflow/copy/: client.py  executor.py  manager.py  utils.py
src/fabricflow/copy/job/: manager.py  types.py
src/fabricflow/copy/job/sinks/: lakehouse_table.py
src/fabricflow/core/folders/: manager.py  utils.py
src/fabricflow/core/items/: manager.py
src/fabricflow/core/workspaces/: manager.py
src/fabricflow/pipeline/: __init__.py  client.py  executor.py  templates.py  utils.py
src/fabricflow/pipeline/activities/: base.py
src/fabricflow/pipeline/activities/copy/: copy.py  executor.py
src/fabricflow/pipeline/activities/lookup/: executor.py  lookup.py
src/fabricflow/pipeline/sinks/: base.py  lakehouse_table.py  parquet_file.py  types.py
src/fabricflow/pipeline/sources/: __init__.py  base.py  google_big_query.py  sql_server.py  types.py
src/fabricflow/pipeline/templates/: __init__.py  templates.py
src/fabricflow/pipeline/templates/definitions/: CopyGoogleBigQueryToLakehouseTable.json  CopyGoogleBigQueryToParquetFile.json  LookupGoogleBigQuery.json
tests/: test_main.py
tests/copy/: test_utils.py
